--- a/avenger.css
+++ b/avenger.css
@@ -20,10 +20,10 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 0;
-    
+
 }
 
-.nav-menu__link  {
+.nav-menu__link {
     color: white;
 }
 
@@ -56,8 +56,9 @@ body {
 .main-info__wrapper {
     display: flex;
     justify-content: space-between;
-    width: 600px;
+    width: 70%;
     align-items: center;
+    margin: 0 auto;
 }
 
 .overview-wrapper {
@@ -77,4 +78,67 @@ body {
 .link {
     margin-bottom: 20px;
     color: blue;
+}
+
+.main-content {
+    padding: 0 100px;
+}
+
+.cart-button {
+    padding: 5px 10px;
+    width: 150px;
+    border-radius: 10px;
+    outline: none;
+}
+
+.add-button {
+    border: none;
+    background-color: red;
+    color: white;
+    margin-bottom: 10px;
+}
+
+.buy-button {
+    filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.25));
+    background-color: white;
+    border: none;
+}
+
+.price {
+    color: red;
+    font-size: 30px;
+    font-weight: 600;
+    margin: 0;
+}
+
+.cart-wrapper {
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
+    padding: 10px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.in-stock {
+    position: relative;
+    padding-left: 15px;
+}
+
+.in-stock::before {
+    content: "";
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    top: 4px;
+    left: 0;
+    background: #12A320;
+    border-radius: 50%;
+}
+
+.discription {
+    width: 350px;
+}
+
+.avender-universe_title {
+    text-align: center;
 }
